<?xml version="1.0"?>
<package>
  <name>jaguar_base</name>
  <version>0.1.0</version>
  <description>DrRobot Jaguar4x4 robot driver</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/jaguar_base</url>
  <url type="bugtracker">https://github.com/gstavrinos/jaguar_robot/issues</url>
  <url type="repository">https://github.com/gstavrinos/jaguar_robot</url>

  <author email="gstavrinos@iit.demokritos.gr">George Stavrinos</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>jaguar_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>jaguar_msgs</run_depend>
  <run_depend>jaguar_description</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>topic_tools</run_depend>


  <export>
  </export>
</package>
