<?xml version="1.0"?>
<package>
  <name>jaguar_bringup</name>
  <version>0.1.0</version>
  <description>DrRobot Jaguar4x4 installation and integration package</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>
  <author email="gstavrinos@iit.demokritos.gr">George Stavrinos</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/jaguar_bringup</url>
  <url type="bugtracker">https://github.com/gstavrinos/jaguar_robot/issues</url>
  <url type="repository">https://github.com/gstavrinos/jaguar_robot</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>urg_node</run_depend>
  <run_depend>laser_filters</run_depend>
  <run_depend>myahrs_driver</run_depend>
  <run_depend>imu_complementary_filter</run_depend>
  <run_depend>jaguar_base</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
